--- a/trunk/jsidplay2/src/applet/config/ConfigTexts_de.properties
+++ b/trunk/jsidplay2/src/applet/config/ConfigTexts_de.properties
@@ -296,3 +296,18 @@ EMULATION_FORCE_STEREO_TUNE_TOOLTIP=Die Emulation eines zweiten SID Chips wird e
 
 EMULATION_STEREO_SID_MODEL_DESC=Verwende dieses SID Modell für den Stereo SID Chip (Default: Verwende das SID Modell wie für den ersten SID Chip)
 EMULATION_STEREO_SID_MODEL_TOOLTIP=Verwende dieses SID Modell für den Stereo SID Chip
+
+CURRENT_FAVORITE_DESC=Aktuell angezeigte Favoritenliste.
+CURRENT_FAVORITE_TOOLTIP=Aktuell angezeigte Favoritenliste
+
+FAVORITES_NAME_DESC=Name der Favoritenliste.
+FAVORITES_NAME_TOOLTIP=Name der Favoritenliste
+
+FILTER_NAME_DESC=Filter Name
+FILTER_NAME_TOOLTIP=Filter Name
+
+FILTER_FILTER8580_CURVE_POSITION_DESC=SID 8580 Mittenfrequenz
+FILTER_FILTER8580_CURVE_POSITION_TOOLTIP=SID 8580 Mittenfrequenz
+
+FILTER_FILTER6581_CURVE_POSITION_DESC=SID 6581 Parameter zur Beeinflussung der Mittenfrequenz von 0 (schwach) bis 1 (stark)
+FILTER_FILTER6581_CURVE_POSITION_TOOLTIP=SID 6581 Parameter zur Beeinflussung der Mittenfrequenz
