--- a/trunk/jsidplay2/src/applet/config/ConfigTexts_de.properties
+++ b/trunk/jsidplay2/src/applet/config/ConfigTexts_de.properties
@@ -19,7 +19,10 @@ FILTERS=Filter
 FILTER=Filter
 FAVORITES=Favoriten
 FAVORITE=Favorit
-FILENAME=Filename
+HVSC_ENTRIES=Entries
+HVSC_ENTRY=Entry
+STIL_ENTRIES=STIL Entries
+STIL_ENTRY=STIL Entry
 
 BROWSE=Durchsuchen...
 
