--- a/trunk/jsidplay2/src/applet/collection/CollectionTexts_de.properties
+++ b/trunk/jsidplay2/src/applet/collection/CollectionTexts_de.properties
@@ -44,3 +44,30 @@ STIL_AUTHOR=STIL Autor
 STIL_TITLE=STIL Titel
 STIL_ARTIST=STIL Künstler
 STIL_COMMENT=STIL Kommentar
+
+TITLE=Titel
+AUTHOR=Autor
+RELEASED=Publiziert
+FORMAT=Format
+PLAYER_ID=Player ID
+NO_OF_SONGS=Song Anzahl
+START_SONG=Start Song
+CLOCK_FREQ=Takt Frequenz
+SPEED=Geschwindigkeit
+SID_MODEL_1=SID Modell 1
+SID_MODEL_2=SID Modell 2
+COMPATIBILITY=Kompatibilität
+TUNE_LENGTH=Tune Länge (s)
+AUDIO=Ton
+SID_CHIP_BASE_1=SID Chip Basisadresse 1
+SID_CHIP_BASE_2=SID Chip Basisadresse 2
+DRIVER_ADDRESS=Treiberaddresse
+LOAD_ADDRESS=Ladeaddresse
+LOAD_LENGTH=Ladelänge
+INIT_ADDRESS=Init-Addresse
+PLAYER_ADDRESS=Player-Addresse
+FILE_DATE=File Datum
+FILE_SIZE_KB=File Grösse (kb)
+TUNE_SIZE_B=Tune Grösse (b)
+RELOC_START_PAGE=Reloc. Start Seite
+RELOC_NO_PAGES=Reloc. Seitenanzahl
