--- a/trunk/jsidplay2/src/applet/favorites/FavoritesTexts_de.properties
+++ b/trunk/jsidplay2/src/applet/favorites/FavoritesTexts_de.properties
@@ -40,6 +40,7 @@ SID_CHIP_BASE_1=SID Chip Basisadresse 1
 SID_CHIP_BASE_2=SID Chip Basisadresse 2
 DRIVER_ADDRESS=Treiberaddresse
 LOAD_ADDRESS=Ladeaddresse
+LOAD_LENGTH=Ladelänge
 INIT_ADDRESS=Init-Addresse
 PLAYER_ADDRESS=Player-Addresse
 FILE_DATE=File Datum
