--- a/trunk/jsidplay2/src/applet/collection/CollectionTexts_de.properties
+++ b/trunk/jsidplay2/src/applet/collection/CollectionTexts_de.properties
@@ -35,16 +35,8 @@ ADD_TO_A_NEW_PLAYLIST=Einer neuen Playlist hinzufügen
 
 NEW_TAB=Neuer Tab
 
-FILE_NAME=Dateiname
-FULL_PATH=Dateipfad
-
-STIL_GLB_COMMENT=STIL glb. Kommentar
-STIL_NAME=STIL Name
-STIL_AUTHOR=STIL Autor
-STIL_TITLE=STIL Titel
-STIL_ARTIST=STIL Künstler
-STIL_COMMENT=STIL Kommentar
-
+NAME=Dateiname
+PATH=Dateipfad
 TITLE=Titel
 AUTHOR=Autor
 RELEASED=Publiziert
@@ -71,3 +63,9 @@ FILE_SIZE_KB=File Grösse (kb)
 TUNE_SIZE_B=Tune Grösse (b)
 RELOC_START_PAGE=Reloc. Start Seite
 RELOC_NO_PAGES=Reloc. Seitenanzahl
+STIL_GLB_COMMENT=STIL glb. Kommentar
+STIL_NAME=STIL Name
+STIL_AUTHOR=STIL Autor
+STIL_TITLE=STIL Titel
+STIL_ARTIST=STIL Künstler
+STIL_COMMENT=STIL Kommentar
