--- a/trunk/jsidplay2/src/applet/collection/CollectionTexts_de.properties
+++ b/trunk/jsidplay2/src/applet/collection/CollectionTexts_de.properties
@@ -35,37 +35,37 @@ ADD_TO_A_NEW_PLAYLIST=Einer neuen Playlist hinzufügen
 
 NEW_TAB=Neuer Tab
 
-NAME=Dateiname
-PATH=Dateipfad
-TITLE=Titel
-AUTHOR=Autor
-RELEASED=Publiziert
-FORMAT=Format
-PLAYER_ID=Player ID
-NO_OF_SONGS=Song Anzahl
-START_SONG=Start Song
-CLOCK_FREQ=Takt Frequenz
-SPEED=Geschwindigkeit
-SID_MODEL_1=SID Modell 1
-SID_MODEL_2=SID Modell 2
-COMPATIBILITY=Kompatibilität
-TUNE_LENGTH=Tune Länge (s)
-AUDIO=Ton
-SID_CHIP_BASE_1=SID Chip Basisadresse 1
-SID_CHIP_BASE_2=SID Chip Basisadresse 2
-DRIVER_ADDRESS=Treiberaddresse
-LOAD_ADDRESS=Ladeaddresse
-LOAD_LENGTH=Ladelänge
-INIT_ADDRESS=Init-Addresse
-PLAYER_ADDRESS=Player-Addresse
-FILE_DATE=File Datum
-FILE_SIZE_KB=File Grösse (kb)
-TUNE_SIZE_B=Tune Grösse (b)
-RELOC_START_PAGE=Reloc. Start Seite
-RELOC_NO_PAGES=Reloc. Seitenanzahl
-STIL_GLB_COMMENT=STIL glb. Kommentar
-STIL_NAME=STIL Name
-STIL_AUTHOR=STIL Autor
-STIL_TITLE=STIL Titel
-STIL_ARTIST=STIL Künstler
-STIL_COMMENT=STIL Kommentar
+HVSCEntry.path=Dateipfad
+HVSCEntry.name=Dateiname
+HVSCEntry.title=Titel
+HVSCEntry.author=Autor
+HVSCEntry.released=Publiziert
+HVSCEntry.format=Format
+HVSCEntry.playerId=Player ID
+HVSCEntry.noOfSongs=Song Anzahl
+HVSCEntry.startSong=Start Song
+HVSCEntry.clockFreq=Takt Frequenz
+HVSCEntry.speed=Geschwindigkeit
+HVSCEntry.sidModel1=SID Modell 1
+HVSCEntry.sidModel2=SID Modell 2
+HVSCEntry.compatibility=Kompatibilität
+HVSCEntry.tuneLength=Tune Länge (s)
+HVSCEntry.audio=Ton
+HVSCEntry.sidChipBase1=SID Chip Basisadresse 1
+HVSCEntry.sidChipBase2=SID Chip Basisadresse 2
+HVSCEntry.driverAddress=Treiberaddresse
+HVSCEntry.loadAddress=Ladeaddresse
+HVSCEntry.loadLength=Ladelänge
+HVSCEntry.initAddress=Init-Addresse
+HVSCEntry.playerAddress=Player-Addresse
+HVSCEntry.fileDate=File Datum
+HVSCEntry.fileSizeKb=File Grösse (kb)
+HVSCEntry.tuneSizeB=Tune Grösse (b)
+HVSCEntry.relocStartPage=Reloc. Start Seite
+HVSCEntry.relocNoPages=Reloc. Seitenanzahl
+HVSCEntry.stilGlbComment=STIL glb. Kommentar
+STIL.stilName=STIL Name
+STIL.stilAuthor=STIL Autor
+STIL.stilTitle=STIL Titel
+STIL.stilArtist=STIL Künstler
+STIL.stilComment=STIL Kommentar
