--- a/trunk/jsidplay2/src/applet/collection/CollectionTexts_de.properties
+++ b/trunk/jsidplay2/src/applet/collection/CollectionTexts_de.properties
@@ -64,8 +64,8 @@ HVSCEntry.tuneSizeB=Tune Grösse (b)
 HVSCEntry.relocStartPage=Reloc. Start Seite
 HVSCEntry.relocNoPages=Reloc. Seitenanzahl
 HVSCEntry.stilGlbComment=STIL glb. Kommentar
-STIL.stilName=STIL Name
-STIL.stilAuthor=STIL Autor
-STIL.stilTitle=STIL Titel
-STIL.stilArtist=STIL Künstler
-STIL.stilComment=STIL Kommentar
+StilEntry.stilName=STIL Name
+StilEntry.stilAuthor=STIL Autor
+StilEntry.stilTitle=STIL Titel
+StilEntry.stilArtist=STIL Künstler
+StilEntry.stilComment=STIL Kommentar
