--- a/trunk/jsidplay2/src/applet/config/ConfigTexts_de.properties
+++ b/trunk/jsidplay2/src/applet/config/ConfigTexts_de.properties
@@ -21,6 +21,10 @@ FAVORITES=Favoriten
 FAVORITE=Favorit
 FAVORITES_COLUMNS=Spalten
 FAVORITE_COLUMN=Attribut
+FAVORITES_SELECTED_ROW_FROM_DESC=Erster ausgewählter Favorit
+FAVORITES_SELECTED_ROW_FROM_TOOLTIP=Erster ausgewählter Favorit
+FAVORITES_SELECTED_ROW_TO_DESC=Letzter ausgewählter Favorit
+FAVORITES_SELECTED_ROW_TO_TOOLTIP=Letzter ausgewählter Favorit
 HVSC_ENTRIES=Dateinamen
 HVSC_ENTRY=Dateiname
 STIL_ENTRIES=STIL Entries
