--- a/trunk/jsidplay2/src/applet/config/ConfigTexts_de.properties
+++ b/trunk/jsidplay2/src/applet/config/ConfigTexts_de.properties
@@ -164,34 +164,34 @@ JOYSTICK_DEVICE_NAME2_DESC=Gerätename vom Joystick in Port 2. Mit diesem Gerät w
 \ Bei Verwendung der Tastatur als Joystick kann es zu überschneidungen mit der Tastatureingabe kommen.
 JOYSTICK_DEVICE_NAME2_TOOLTIP=Gerätename vom Joystick in Port 2
 
-JOYSTICK_COMPONENT_NAME_UP1_DESC=Komponentenname zur Emulation der Joysticktichtung "Hoch" für den Joystick in Port 1. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks nach oben emuliert
+JOYSTICK_COMPONENT_NAME_UP1_DESC=Komponentenname zur Emulation der Joysticktichtung "Hoch" für den Joystick in Port 1. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks emuliert
 JOYSTICK_COMPONENT_NAME_UP1_TOOLTIP=Komponentenname zur Emulation der Joysticktichtung "Hoch"
 
-JOYSTICK_COMPONENT_NAME_UP2_DESC=Komponentenname zur Emulation der Joysticktichtung "Hoch" für den Joystick in Port 2. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks nach oben emuliert
+JOYSTICK_COMPONENT_NAME_UP2_DESC=Komponentenname zur Emulation der Joysticktichtung "Hoch" für den Joystick in Port 2. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks emuliert
 JOYSTICK_COMPONENT_NAME_UP2_TOOLTIP=Komponentenname zur Emulation der Joysticktichtung "Hoch"
 
-JOYSTICK_COMPONENT_NAME_DOWN1_DESC=Komponentenname zur Emulation der Joysticktichtung "Runter" für den Joystick in Port 1. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks nach oben emuliert
+JOYSTICK_COMPONENT_NAME_DOWN1_DESC=Komponentenname zur Emulation der Joysticktichtung "Runter" für den Joystick in Port 1. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks emuliert
 JOYSTICK_COMPONENT_NAME_DOWN1_TOOLTIP=Komponentenname zur Emulation der Joysticktichtung "Runter"
 
-JOYSTICK_COMPONENT_NAME_DOWN2_DESC=Komponentenname zur Emulation der Joysticktichtung "Runter" für den Joystick in Port 2. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks nach oben emuliert
+JOYSTICK_COMPONENT_NAME_DOWN2_DESC=Komponentenname zur Emulation der Joysticktichtung "Runter" für den Joystick in Port 2. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks emuliert
 JOYSTICK_COMPONENT_NAME_DOWN2_TOOLTIP=Komponentenname zur Emulation der Joysticktichtung "Runter"
 
-JOYSTICK_COMPONENT_NAME_LEFT1_DESC=Komponentenname zur Emulation der Joysticktichtung "Links" für den Joystick in Port 1. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks nach oben emuliert
+JOYSTICK_COMPONENT_NAME_LEFT1_DESC=Komponentenname zur Emulation der Joysticktichtung "Links" für den Joystick in Port 1. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks emuliert
 JOYSTICK_COMPONENT_NAME_LEFT1_TOOLTIP=Komponentenname zur Emulation der Joysticktichtung "Links"
 
-JOYSTICK_COMPONENT_NAME_LEFT2_DESC=Komponentenname zur Emulation der Joysticktichtung "Links" für den Joystick in Port 2. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks nach oben emuliert
+JOYSTICK_COMPONENT_NAME_LEFT2_DESC=Komponentenname zur Emulation der Joysticktichtung "Links" für den Joystick in Port 2. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks emuliert
 JOYSTICK_COMPONENT_NAME_LEFT2_TOOLTIP=Komponentenname zur Emulation der Joysticktichtung "Links"
 
-JOYSTICK_COMPONENT_NAME_RIGHT1_DESC=Komponentenname zur Emulation der Joysticktichtung "Right" für den Joystick in Port 1. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks nach oben emuliert
+JOYSTICK_COMPONENT_NAME_RIGHT1_DESC=Komponentenname zur Emulation der Joysticktichtung "Right" für den Joystick in Port 1. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks emuliert
 JOYSTICK_COMPONENT_NAME_RIGHT1_TOOLTIP=Komponentenname zur Emulation der Joysticktichtung "Right"
 
-JOYSTICK_COMPONENT_NAME_RIGHT2_DESC=Komponentenname zur Emulation der Joysticktichtung "Right" für den Joystick in Port 2. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks nach oben emuliert
+JOYSTICK_COMPONENT_NAME_RIGHT2_DESC=Komponentenname zur Emulation der Joysticktichtung "Right" für den Joystick in Port 2. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks emuliert
 JOYSTICK_COMPONENT_NAME_RIGHT2_TOOLTIP=Komponentenname zur Emulation der Joysticktichtung "Right"
 
-JOYSTICK_COMPONENT_NAME_BUTTON1_DESC=Komponentenname zur Emulation der Joystick Taste "Feuer" für den Joystick in Port 1. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks nach oben emuliert
+JOYSTICK_COMPONENT_NAME_BUTTON1_DESC=Komponentenname zur Emulation der Joystick Taste "Feuer" für den Joystick in Port 1. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks emuliert
 JOYSTICK_COMPONENT_NAME_BUTTON1_TOOLTIP=Komponentenname zur Emulation der Joystick Taste "Feuer"
 
-JOYSTICK_COMPONENT_NAME_BUTTON2_DESC=Komponentenname zur Emulation der Joystick Taste "Feuer" für den Joystick in Port 2. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks nach oben emuliert
+JOYSTICK_COMPONENT_NAME_BUTTON2_DESC=Komponentenname zur Emulation der Joystick Taste "Feuer" für den Joystick in Port 2. Mit dieser Komponente des ausgewählten Gerätes wird die Bewegungsrichtung des Joysticks emuliert
 JOYSTICK_COMPONENT_NAME_BUTTON2_TOOLTIP=Komponentenname zur Emulation der Joystick Taste "Feuer"
 
 JOYSTICK_COMPONENT_VALUE_UP1_DESC=Schwellwert der Komponente, der erreicht werden muss damit die Joystickbewegung "Hoch" in Port 1 erkannt wird.
@@ -299,7 +299,7 @@ EMULATION_FILTER8580_TOOLTIP=Filter für das SID Modell 8580
 EMULATION_DIGI_BOOSTED8580_DESC=Digiboost Hack für das SID Modell 8580. 8580 Modelle haben eine viel leisere Lautstärke bei Digis.
 EMULATION_DIGI_BOOSTED8580_TOOLTIP=Digiboost Hack für 8580
 
-EMULATION_DUAL_SID_BASE_DESC=Basis Adresse des zweiten emulierten SID Chips für Stereo Tunes (Wenn diese nicht im Tne hinterlegt ist).
+EMULATION_DUAL_SID_BASE_DESC=Basis Adresse des zweiten emulierten SID Chips für Stereo Tunes (Wenn diese nicht im Tune hinterlegt ist).
 EMULATION_DUAL_SID_BASE_TOOLTIP=Basis Adresse des zweiten emulierten SID Chips (Stereo)
 
 EMULATION_FORCE_STEREO_TUNE_DESC=Die Emulation eines zweiten SID Chips wird erzwungen und verwendet als Basisadresse dualSidBase.
