--- a/jsidplay2/src/ui/JSidPlay2_de.properties
+++ b/jsidplay2/src/ui/JSidPlay2_de.properties
@@ -92,6 +92,12 @@ MEMORY=Disassembler...
 SID_DUMP=SID Dump...
 SID_REGISTERS=SID Register...
 
+SETTINGS=_Einstellungen
+IMPORT=_Importieren
+EXPORT=_Exportieren
+IMPORT_CONFIGURATION=Konfiguration importieren
+PLEASE_RESTART=Die Änderungen werden erst nach einem Neustart des JSIDPlay2 wirksam!\n Importieren fortsetzen?
+
 HELP=_Hilfe
 ABOUT=Über
 
