--- a/trunk/jsidplay2/src/main/resources/ui/JSidPlay2_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/JSidPlay2_de.properties
@@ -105,6 +105,8 @@ DATASETTE_COUNTER=Datasetten Zähler:
 FLOPPY_TRACK=Floppy Track:
 DATE=Datum:
 TIME=Zeit:
+SPEED=Speed:
+PLAYER=Player:
 MEM=Speicher:
 
 EXTEND_DISK_IMAGE_TO_40_TRACKS=Diskette auf 40 tracks erweitern?
