--- a/trunk/jsidplay2/src/main/resources/ui/soundsettings/SoundSettings_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/soundsettings/SoundSettings_de.properties
@@ -11,15 +11,9 @@ EMU=Emulator
 RECORDING=Aufnahme
 BROWSE=Durchsuchen...
 
-SOASC=Stone Oakvalley's Authentic SID Collection - www.6581-8580.com)
+PROXY=Proxy Einstellungen
 ENABLE_PROXY=Proxy verwenden
 HOSTNAME_AND_PORT=Rechnername und Port:
-DOWNLOAD_URL_R2=Download URL (6581R2):
-DOWNLOAD_R2=Herunterladen
-DOWNLOAD_URL_R4=Download URL (6581R4):
-DOWNLOAD_R4=Herunterladen
-DOWNLOAD_URL_R5=Download URL (8580R5):
-DOWNLOAD_R5=Herunterladen
 
 SOUNDCARD=Soundkarte
 HARDSID4U=HardSID4U
