--- a/jsidplay2/src/main/resources/ui/musiccollection/MusicCollection_de.properties
+++ b/jsidplay2/src/main/resources/ui/musiccollection/MusicCollection_de.properties
@@ -16,6 +16,14 @@ CONFIGURATION=Manuelle Konfiguration
 BASE_DIR=Basis Directory:
 BROWSE=Durchsuchen...
 
+PLAYBACK_OPTIONS=Wiedergabe Optionen
+
+DEFAULT_LENGTH=Default Länge:
+DEFAULT_LENGTH_TIP=Default Song Länge (00:00 - unbegrenzt)
+DEFAULT_LENGTH_FORMAT=Das Zeitformat ist mm:ss
+RESPECT_SONG_LENGTH=Song Länge berücksichtigen
+SINGLE_SONG=Nur den Startsong spielen
+
 PLEASE_SELECT_HVSC=<Bitte Konfigurieren Sie die HVSC>
 PLEASE_SELECT_CGSC=<Bitte Konfigurieren Sie die CGSC>
 
@@ -27,6 +35,9 @@ SHOW_STIL=STIL anzeigen...
 ADD_TO_FAVORITES=Zu Favoriten hinzufügen
 CONVERT_TO=Konvertieren nach...
 PSID64=PSID64 (.prg)
+DOWNLOAD_R2=Download als mp3 (6581R2)
+DOWNLOAD_R4=Download als mp3 (6581R4)
+DOWNLOAD_R5=Download als mp3 (8580R5)
 
 FORWARD=Forwärts
 BACKWARD=Rückwärts
