--- a/trunk/jsidplay2/src/main/resources/ui/JSidPlay2_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/JSidPlay2_de.properties
@@ -103,7 +103,7 @@ ABOUT=Über
 
 DATASETTE_COUNTER=Datasetten Zähler:
 FLOPPY_TRACK=Floppy Track:
-DATE=Datum:
+RELEASE=Release:
 TIME=Zeit:
 SPEED=Speed:
 PLAYER_ID=Player:
