--- a/trunk/jsidplay2/src/main/resources/ui/gamebase/GameBase_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/gamebase/GameBase_de.properties
@@ -15,3 +15,8 @@ CATEGORY=Kategorie
 MUSICIAN=Musiker
 MUSIC_GET=Musik spielen
 COMMENT=Kommentar
+
+CONFIGURATION=Manuelle Konfiguration
+BASE_DIR=Basis Directory:
+BROWSE=Durchsuchen...
+DOWNLOAD=Herunterladen
