--- a/trunk/jsidplay2/src/main/resources/ui/gamebase/GameBase_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/gamebase/GameBase_de.properties
@@ -1,4 +1,4 @@
-ENABLE_GAMEBASE=GameBase 64 aktivieren
+AUTO_CONFIGURATION=Online Auto-Konfiguration (Bitte haben sie Geduld, der Download kann sehr lange dauern!)
 HINT=Für diese Funktion ist ein permanenter Online-Zugang erforderlich!
 CONFIGURATION=Konfiguration
 DB_FILE=Datenbankdatei:
@@ -17,6 +17,6 @@ MUSIC_GET=Musik spielen
 COMMENT=Kommentar
 
 CONFIGURATION=Manuelle Konfiguration
-BASE_DIR=Basis Directory:
+BASE_DIR=GB64 Datenbank:
 BROWSE=Durchsuchen...
 DOWNLOAD=Herunterladen
